--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "test": "jest --coverage",
+    "test:file": "jest $1 --watch",
     "format": "prettier --write ."
   },
   "dependencies": {
@@ -21,9 +23,12 @@
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.1",
     "eslint-config-prettier": "^8.8.0",
     "eslint-config-standard-with-typescript": "^34.0.1",
     "eslint-plugin-prettier": "^4.2.1",
-    "prettier": "^2.8.8"
+    "jest": "^29.5.0",
+    "prettier": "^2.8.8",
+    "ts-jest": "^29.1.0"
   }
 }
